--- a/README
+++ b/README
@@ -13,7 +13,7 @@ user@user:~/Desktop$ cd plown
 user@user:~/Desktop/plown$ ./plown.py
 
 
-What can Plone do
+What can Plown do
 =================
 Plown has two modes: enumeration mode and brute force mode. On enumeration mode it tries to find usernames and find out if several known vulnerabilities exist. 
 On brute force mode, Plown will try to authenticate to a Plone site using a list of users and passwords specified, by connecting with multiple threads. By default 16 threads are started, with that number being configurable. 
